[gd_scene load_steps=11 format=2]

[ext_resource path="res://Logic/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Logic/Player/Head.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Potion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Logic/Player/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sound/laser.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="CapsuleShape" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("DrinkAnimation/Spatial/Potion:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.406672, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DrinkAnimation/Spatial/Potion:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.57277, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("DrinkAnimation/Spatial/Potion:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1.54685, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("DrinkAnimation/Spatial/Potion:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("DrinkAnimation/Spatial/Potion:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("DrinkAnimation/Spatial/Potion:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "drink"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("DrinkAnimation/Spatial/Potion:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.406672, -0.25, 0, 0.25, 0, 0.187675, -0.25, 0, 0.25, 0, 0.147523, -0.25, 0, 0.25, 0, 0.168619, -0.25, 0, 0.25, 0, 0.161499, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DrinkAnimation/Spatial/Potion:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.7253, -0.25, 0, 0.25, 0, 2.01662, -0.25, 0, 0.25, 0, 2.27306, -0.25, 0, 0.25, 0, 2.39743, -0.25, 0, 0.25, 0, 2.15673, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("DrinkAnimation/Spatial/Potion:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1.54685, -0.25, 0, 0.25, 0, -1.09049, -0.25, 0, 0.25, 0, -1.13831, -0.25, 0, 0.25, 0, -1.13831, -0.25, 0, 0.25, 0, -1.13831, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.8 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("DrinkAnimation/Spatial/Potion:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 78.338, -0.25, 0, 0.25, 0, 125.539, -0.25, 0, 0.25, 0, 130.392, -0.25, 0, 0.25, 0, 125.539, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.8 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("DrinkAnimation/Spatial/Potion:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.8 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("DrinkAnimation/Spatial/Potion:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.8 )
}

[node name="Player" type="KinematicBody"]
collision_layer = 0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
visible = false
mesh = SubResource( 1 )

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 2 )

[node name="Head" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Gun" parent="Head" instance=ExtResource( 4 )]

[node name="HurtBox" type="Area" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="HurtBox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 3 )

[node name="PickingUp" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="PickingUp"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 3 )

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="LaserStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DrinkAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/drink = SubResource( 4 )

[node name="Spatial" type="Spatial" parent="DrinkAnimation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.38677, 0.47914 )

[node name="Potion" parent="DrinkAnimation/Spatial" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.406672, 1.57277, -1.54685 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
